Added styles for body

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>IT SPA</title>
+  <link rel="stylesheet" href="css/it-spa.min.css">
   <base href="/" target="_self">
 </head>
 
