Added files with logo and links for them

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <header>
-      <img src="#" id="logo" alt="PigiSpa - logo">
+      <a href="./"><img src="src/assets/img/pigiSpa-logo.png" id="logo" alt="PigiSpa - logo"></a>
       <nav>
         <a href="#" id="login">Logowanie</a>
         <a href="#" id="register">Rejestracja</a>
@@ -22,8 +22,9 @@
     </section>
   </main>
   <footer>
-    <img src="#" id="logo-small" alt="PigiSpa - logo">
-    <p class="text-muted">Copyright © PigiSpa. All rights reserved.</p>
+    <a href="./">
+      <img src="src/assets/img/pigiSpa-logo-footer.png" id="logo-small" alt="PigiSpa - logo">
+    </a>
   </footer>
   <script src="src/it-spa.js"></script>
 </body>
