--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="utf-8">
-  <title>IT SPA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/it-spa.min.css">
   <base href="/" target="_self">
+  <title>IT SPA</title>
 </head>
 
 <body>
