Added styles for header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <header>
       <a href="./"><img src="src/assets/img/pigiSpa-logo.png" id="logo" alt="PigiSpa - logo"></a>
       <nav>
-        <a href="#" id="login">Logowanie</a>
-        <a href="#" id="register">Rejestracja</a>
+        <a href="#" id="login">Logowanie</a> | <a href="#" id="register">Rejestracja</a>
       </nav>
     </header>
     <section>
