--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/it-spa.min.css">
   <base href="/" target="_self">
-  <title>IT SPA</title>
+  <title>Pigi SPA</title>
 </head>
 
 <body>
