Added style css for section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       </nav>
     </header>
     <section>
-      <p><span class="pink">PigiSpa</span> zaprasza przepracowanych Front-End Developerów na zabiegi SPA!</p>
+      <p class="slogan">
+        <span class="pink">PigiSpa</span> zaprasza przepracowanych Front-End Developerów na zabiegi SPA!
+      </p>
     </section>
   </main>
   <footer>
