--- a/index.html
+++ b/index.html
@@ -89,33 +89,33 @@
       </div> -->
 
       <!-- BASKET BOX -->
-      <!-- <div class="basket-box">
+      <div class="basket-box">
         <h2>TWÓJ KOSZYK</h2>
-        <p id="slogan-basket">Załaduj coś do koszyka!</p> -->
+        <!-- <p id="slogan-basket">Załaduj coś do koszyka!</p> -->
 
-      <!-- BASKET CONTENT -->
-      <!-- <div id="basket-content-box">
-            <ol>
-              <li id="poz_1">Biczowanie kablem od myszy x <span class="quant">1</span> - <span class="price">70
-                  zł</span>
-                <span class="remove"></span></li>
-              <li id="poz_2">Peeling odłamkami płyty CD x <span class="quant">1</span> - <span class="price">50
-                  zł</span>
-                <span class="remove"></span></li>
-              <li id="poz_3">Pokój binarny x <span class="quant">3</span> - <span class="price">720 zł</span>
-                <span class="remove"></span><br>
-                od <span class="term" id="term_from">22-05-2020</span><br>
-                do <span class="term" id="term_to">25-05-2020</span>
-              </li>
-            </ol>
+        <!-- BASKET CONTENT -->
+        <div id="basket-content-box">
+          <ol>
+            <li id="poz_1">Biczowanie kablem od myszy x <span class="quant">1</span> - <span class="price">70
+                zł</span>
+              <span class="remove"></span></li>
+            <li id="poz_2">Peeling odłamkami płyty CD x <span class="quant">1</span> - <span class="price">50
+                zł</span>
+              <span class="remove"></span></li>
+            <li id="poz_3">Pokój binarny x <span class="quant">3</span> - <span class="price">720 zł</span>
+              <span class="remove"></span><br>
+              od <span class="term" id="term_from">22-05-2020</span><br>
+              do <span class="term" id="term_to">25-05-2020</span>
+            </li>
+          </ol>
 
-            <p class="summary-text">Razem do zapłaty: <span id="all-cost">840 zł</span></p>
+          <p class="summary-text">Razem do zapłaty: <span id="all-cost">840 zł</span></p>
 
-            <button id="pay">Kupuję i płacę</button>
-          </div> -->
+          <button id="pay">Kupuję i płacę</button>
+        </div>
 
-      <!-- BASKET CONTENT AFTER PAYMANT -->
-      <!-- <div id="basket-bought-content-box">
+        <!-- BASKET CONTENT AFTER PAYMANT -->
+        <!-- <div id="basket-bought-content-box">
             <ol>
               <li>Biczowanie kablem od myszy x <span class="quant_bought">1</span></li>
               <li>Peeling odłamkami płyty CD x <span class="quant_bought">1</span></li>
@@ -125,9 +125,9 @@
               </li>
             </ol>
             <p class="summary-text">To wszystko za jedyne<br> <span id="all-cost">840 zł</span></p>
-          </div>
-        </div>
-      </div> -->
+          </div> -->
+      </div>
+      </div>
 
       <!-- TREATMENTS LIST -->
       <!-- <div class="treamtments-box">
@@ -145,7 +145,7 @@
 
       <!-- TREATMENT BOX -->
       <!-- <div class="treamtment-box">
-        <h2>Masaż rozgrzanym monitorem</h2>
+        <h2 id="title">Masaż rozgrzanym monitorem</h2>
         <p>Zabieg obejmuje obszar: <span id="treat-area">back</span><br>
           Czas trwania zabiegu: <span id="treat-time">30</span> min.<br>
           Cena zabiegu: <span id="treat-price">80</span> zł</p>
@@ -165,7 +165,7 @@
 
       <!-- ROOM BOX -->
       <div class="room-box">
-        <h2>Pokój unarny</h2>
+        <h2 id="title">Pokój unarny</h2>
         <p>Ilość łóżek: <span id="beds-quantity">back</span><br>
           Ilość osób: <span id="persons-quantity">1</span><br>
           Cena pokoju: <span id="room-price">80</span> zł<br>
