Added files for view components

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <section>
 
       <!-- WELCOME SLOGAN -->
-      <!-- <p class="slogan">
+      <p class="slogan">
         <span class="pink">PigiSpa</span> zaprasza przepracowanych Front-End Developerów na zabiegi SPA!
-      </p> -->
+      </p>
 
       <!-- REGISTRATION FORM -->
       <!-- <div class="registration-box">
@@ -89,12 +89,12 @@
       </div> -->
 
       <!-- BASKET BOX -->
-      <div class="basket-box">
-        <h2>TWÓJ KOSZYK</h2>
-        <!-- <p id="slogan-basket">Załaduj coś do koszyka!</p> -->
+      <!-- <div class="basket-box">
+        <h2>TWÓJ KOSZYK</h2> -->
+      <!-- <p id="slogan-basket">Załaduj coś do koszyka!</p> -->
 
-        <!-- BASKET CONTENT -->
-        <div id="basket-content-box">
+      <!-- BASKET CONTENT -->
+      <!-- <div id="basket-content-box">
           <ol>
             <li id="poz_1">Biczowanie kablem od myszy x <span class="quant">1</span> - <span class="price">70
                 zł</span>
@@ -112,10 +112,10 @@
           <p class="summary-text">Razem do zapłaty: <span id="all-cost">840 zł</span></p>
 
           <button id="pay">Kupuję i płacę</button>
-        </div>
+        </div> -->
 
-        <!-- BASKET CONTENT AFTER PAYMANT -->
-        <!-- <div id="basket-bought-content-box">
+      <!-- BASKET CONTENT AFTER PAYMANT -->
+      <!-- <div id="basket-bought-content-box">
             <ol>
               <li>Biczowanie kablem od myszy x <span class="quant_bought">1</span></li>
               <li>Peeling odłamkami płyty CD x <span class="quant_bought">1</span></li>
@@ -126,8 +126,8 @@
             </ol>
             <p class="summary-text">To wszystko za jedyne<br> <span id="all-cost">840 zł</span></p>
           </div> -->
-      </div>
-      </div>
+      <!-- </div>
+      </div> -->
 
       <!-- TREATMENTS LIST -->
       <!-- <div class="treamtments-box">
@@ -165,7 +165,7 @@
       </div> -->
 
       <!-- ROOM BOX -->
-      <div class="room-box">
+      <!-- <div class="room-box">
         <h2 id="title">Pokój unarny</h2>
         <p>Ilość łóżek: <span id="beds-quantity">back</span><br>
           Ilość osób: <span id="persons-quantity">1</span><br>
@@ -173,9 +173,8 @@
           Data przyjazdu: <input id="room-from" type="date"><br>
           Data wyjazdu: <input id="room-to" type="date"><br>
           Ilość pokoi: <input id="room-num" type="number" min="1" max="10"></p>
-        </p>
         <button id="add-room">Wrzuć do kosza!</button>
-      </div>
+      </div> -->
 
 
     </section>
