--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/it-spa.min.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <base href="/" target="_self">
   <title>Pigi SPA</title>
 </head>
