--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/it-spa.min.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/it-spa.min.css">
   <base href="/" target="_self">
   <title>Pigi SPA</title>
 </head>
@@ -168,7 +168,7 @@
       </div> -->
 
       <!-- ROOM BOX -->
-      <!-- <div class="room-box">
+      <div class="room-box">
         <h2 id="title">Pokój unarny</h2>
         <p>Ilość łóżek: <span id="beds-quantity">back</span><br>
           Ilość osób: <span id="persons-quantity">1</span><br>
@@ -177,7 +177,7 @@
           Data wyjazdu: <input id="room-to" type="date"><br>
           Ilość pokoi: <input id="room-num" type="number" min="1" max="10"></p>
         <button id="add-room">Wrzuć do kosza!</button>
-      </div> -->
+      </div>
 
 
     </section>
