--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
           <h2>Witaj w PigiSpa!</h2>
           <p>Wybierz ulubione zabiegi i zarezerwuj pokój w dogodnym terminie.
             Nasze świnki z PigiSpa już na Ciebie czekają ;)</p>
-        </div> -->
+        </div>
+      </div> -->
 
       <!-- THANKS BOX AFTER PAYMENT -->
       <!-- <div class="thanks-box-after-payment">
@@ -90,12 +91,12 @@
       </div> -->
 
       <!-- BASKET BOX -->
-      <div class="basket-box">
-        <h2>TWÓJ KOSZYK</h2>
-        <!-- <p id="slogan-basket">Załaduj coś do koszyka!</p> -->
+      <!-- <div class="basket-box">
+        <h2>TWÓJ KOSZYK</h2> -->
+      <!-- <p id="slogan-basket">Załaduj coś do koszyka!</p> -->
 
-        <!-- BASKET CONTENT -->
-        <div id="basket-content-box">
+      <!-- BASKET CONTENT -->
+      <!-- <div id="basket-content-box">
           <ol id="basket-content">
             <li id="poz_1">Biczowanie kablem od myszy<br>Il. szt.: <input class="quant" type="number" value="1" min="1"
                 max="100">,
@@ -115,22 +116,22 @@
           <p class="summary-text">Razem do zapłaty: <span id="all-cost">840</span> zł</p>
 
           <button id="pay">Kupuję i płacę</button>
-        </div>
+        </div> -->
 
-        <!-- BASKET CONTENT AFTER PAYMANT -->
-        <!-- <div id="basket-bought-content-box">
-            <ol>
-              <li>Biczowanie kablem od myszy x <span class="quant_bought">1</span></li>
-              <li>Peeling odłamkami płyty CD x <span class="quant_bought">1</span></li>
-              <li>Pokój binarny x <span class="quant_bought">3</span><br>
-                od <span id="term_from_bought">22-05-2020</span><br>
-                do <span id="term_to_bought">25-05-2020</span>
-              </li>
-            </ol>
-            <p class="summary-text">To wszystko za jedyne<br> <span id="all-cost">840 zł</span></p>
-          </div> -->
-      </div>
-      </div>
+      <!-- BASKET CONTENT AFTER PAYMANT -->
+      <!-- <div id="basket-bought-content-box">
+          <ol>
+            <li>Biczowanie kablem od myszy x <span class="quant_bought">1</span></li>
+            <li>Peeling odłamkami płyty CD x <span class="quant_bought">1</span></li>
+            <li>Pokój binarny x <span class="quant_bought">3</span><br>
+              od <span id="term_from_bought">22-05-2020</span><br>
+              do <span id="term_to_bought">25-05-2020</span>
+            </li>
+          </ol>
+          <p class="summary-text">To wszystko za jedyne<br> <span id="all-cost">840 zł</span></p>
+        </div> -->
+      <!-- </div>
+      </div> -->
 
       <!-- TREATMENTS LIST -->
       <!-- <div class="treamtments-box">
