Added component for footer

--- a/_index.html
+++ b/_index.html
@@ -185,9 +185,9 @@
   </main>
 
   <!-- FOOTER -->
-  <!-- <footer>
+  <footer>
     <a href="./" id="logo-small">
     </a>
-  </footer> -->
+  </footer>
   <script src="dist/bundle.js"></script>
 </body>
