--- a/_index.html
+++ b/_index.html
@@ -96,27 +96,27 @@
       <!-- <p id="slogan-basket">Załaduj coś do koszyka!</p> -->
 
       <!-- BASKET CONTENT -->
-      <!-- <div id="basket-content-box">
-          <ol id="basket-content">
-            <li id="poz_1">Biczowanie kablem od myszy<br>Il. szt.: <input class="quant" type="number" value="1" min="1"
-                max="100">,
-              cena: <span class="price">70</span> zł
-              <span class="remove"></span></li>
-            <li id="poz_2">Peeling odłamkami płyty CD<br>Il. szt.: <input class="quant" type="number" value="1" min="1"
-                max="100">, cena: <span class="price">50</span> zł
-              <span class="remove"></span></li>
-            <li id="poz_3">Pokój binarny<br>Il. szt.: <input class="quant" type="number" value="1" min="1" max="100">,
-              cena: <span class="price">240</span> zł
-              <span class="remove"></span><br>
-              od <span class="term" id="term_from">22-05-2020</span><br>
-              do <span class="term" id="term_to">25-05-2020</span>
-            </li>
-          </ol>
+      <div id="basket-content-box">
+        <ol id="basket-content">
+          <li id="poz_1">Biczowanie kablem od myszy<br>Il. szt.: <input class="quant" type="number" value="1" min="1"
+              max="100">,
+            cena: <span class="price">70</span> zł
+            <span class="remove"></span></li>
+          <li id="poz_2">Peeling odłamkami płyty CD<br>Il. szt.: <input class="quant" type="number" value="1" min="1"
+              max="100">, cena: <span class="price">50</span> zł
+            <span class="remove"></span></li>
+          <li id="poz_3">Pokój binarny<br>Il. szt.: <input class="quant" type="number" value="1" min="1" max="100">,
+            cena: <span class="price">240</span> zł
+            <span class="remove"></span><br>
+            od <span class="term" id="term_from">22-05-2020</span><br>
+            do <span class="term" id="term_to">25-05-2020</span>
+          </li>
+        </ol>
 
-          <p class="summary-text">Razem do zapłaty: <span id="all-cost">840</span> zł</p>
+        <p class="summary-text">Razem do zapłaty: <span id="all-cost">840</span> zł</p>
 
-          <button id="pay">Kupuję i płacę</button>
-        </div> -->
+        <button id="pay">Kupuję i płacę</button>
+      </div>
 
       <!-- BASKET CONTENT AFTER PAYMANT -->
       <!-- <div id="basket-bought-content-box">
